--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.0",
     "next": "15.3.3",
+    "plaid": "^36.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-plaid-link": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
