--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "plaid": "^36.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-plaid-link": "^4.0.1"
+    "react-plaid-link": "^4.0.1",
+    "recharts": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
